--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ Select ONE Additional Feature to Add
         <meta charset="utf-8">
         <title>Unit 2 Project</title>
         <style>
-            
+            #h1{background-color: blueviolet;}
         </style>
     </head>
     <body>
-
+        <h1 id="h1">   The Perfect Vacation  </h1>
         
     </body>
 </html>
